# laser

./: .gitignore  .luarc.json  CMakeLists.txt  CONFIGURATION.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  cmake_uninstall.cmake.in  dbg.sh  flake.nix  todo  update-flake.sh  update-homebrew.sh
.github/workflows/: check-format.yml  code-style.yml  makefile.yml  update-homebrew-tap.yml  update-nix-homebrew.yml
completions/: lsr.bash  lsr.fish  lsr.zsh
completions/bash/: lsr
completions/fish/: lsr.fish
completions/zsh/: _lsr
include/: cli.h  colors.h  init_lua.h  laser.h  laser_pwuid.h  logger.h  lua_filters.h  main.h  sort.h  utils.h
include/filetypes/: checktypes.h
include/git/: lgit.h  lgit_utils.h
lua/: colors.lua  filters.lua  laser.lua  laser_default_colors.lua  laser_default_utils.lua  lsr.lua
scripts/: clang-check-format.sh  gen-completions.sh  generate_completion.lua
src/: archives.c  cli.c  colors.c  init_lua.c  laser.c  laser_dirs.c  laser_pwuid.c  logger.c  lua_filters.c  main.c  sort.c  utils.c
src/filetypes/: archives.c  checktype.c  documents.c  medias.c
src/git/: lgit.c  lgit_utils.c  utils.c
src/git/include/: lgit.h  utils.h
src/include/: archives.h  colors.h  laser.h  utils.h
